--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,4 @@
 @import "layout";
 @import "weekday-picker";
 @import "channels";
-
-body {
-    font-family: Arial, sans-serif;
-}
+@import "popup";
