--- a/src/style/weekday-picker.scss
+++ b/src/style/weekday-picker.scss
@@ -14,6 +14,10 @@
     &__item {
         flex: 8rem;
     }
+
+    @media screen and (max-width: 400px) {
+        font-size: 0.6em;
+    }
 }
 
 .weekday {
